# xfer2

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: commands.rs  copy.rs  db.rs  lib.rs  main.rs  scan.rs  types.rs
src/components/: CopyProgressBar.tsx  DatedSubfolderFormat.tsx  DragRegion.tsx  ErrorBoundary.tsx  FileRow.tsx  FolderPairHistory.tsx  FolderSelector.tsx  ScanOptions.tsx  ScanProgressBanner.tsx  SettingsPanel.tsx  Sidebar.tsx  Toolbar.tsx  VirtualFileList.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  input.tsx  tooltip.tsx
src/hooks/: useCopyProgress.ts  useScanProgress.ts  useTauriEvent.ts
src/lib/: api.ts  platform.ts  utils.ts
src/store/: uiStore.ts
src/types/: index.ts
