[package]
name = "xfer-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "xfer_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

jwalk = "0.8"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2"
anyhow = "1"

open = "5"

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
